--- a/lapis2/docker-compose.yml
+++ b/lapis2/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3.9"
 services:
-  lapisOpen:
-    image: ghcr.io/genspectrum/lapis-v2:${LAPIS_TAG}
-    ports:
-      - "8090:8080"
-    command: --silo.url=http://silo:8081
-    volumes:
-      - type: bind
-        source: ../siloLapisTests/testData/testDatabaseConfig.yaml
-        target: /workspace/database_config.yaml
-        read_only: true
-      - type: bind
-        source: ../siloLapisTests/testData/reference_genomes.json
-        target: /workspace/reference_genomes.json
-        read_only: true
+#  lapisOpen:
+#    image: ghcr.io/genspectrum/lapis-v2:${LAPIS_TAG}
+#    ports:
+#      - "8090:8080"
+#    command: --silo.url=http://silo:8081
+#    volumes:
+#      - type: bind
+#        source: ../siloLapisTests/testData/testDatabaseConfig.yaml
+#        target: /workspace/database_config.yaml
+#        read_only: true
+#      - type: bind
+#        source: ../siloLapisTests/testData/reference_genomes.json
+#        target: /workspace/reference_genomes.json
+#        read_only: true
 
   silo:
     image: ghcr.io/genspectrum/lapis-silo:${SILO_TAG}
@@ -21,7 +21,7 @@ services:
       - "8091:8081"
     command: --api
     volumes:
-      - ../siloLapisTests/testData/output:/data
+      - ../siloLapisTests/testData/ebola/output:/data
     depends_on:
       siloPreprocessing:
         condition: service_completed_successfully
@@ -30,25 +30,25 @@ services:
     image: ghcr.io/genspectrum/lapis-silo:${SILO_TAG}
     command: --preprocessing
     volumes:
-      - ../siloLapisTests/testData:/preprocessing/input
-      - ../siloLapisTests/testData/output:/preprocessing/output
-      - ../siloLapisTests/testData/preprocessingConfig.yaml:/app/preprocessing_config.yaml
-      - ../siloLapisTests/testData/testDatabaseConfig.yaml:/app/database_config.yaml
+      - ../siloLapisTests/testData/ebola:/preprocessing/input
+      - ../siloLapisTests/testData/ebola/output:/preprocessing/output
+      - ../siloLapisTests/testData/ebola/preprocessing_config.yaml:/app/preprocessing_config.yaml
+      - ../siloLapisTests/testData/ebola/database_config.yaml:/app/database_config.yaml
 
-  lapisProtected:
-    image: ghcr.io/genspectrum/lapis-v2:${LAPIS_TAG}
-    ports:
-      - "8092:8080"
-    command: --silo.url=http://silo:8081 --lapis.accessKeys.path=/workspace/access_keys.yaml
-    volumes:
-      - type: bind
-        source: ../siloLapisTests/testData/protectedTestDatabaseConfig.yaml
-        target: /workspace/database_config.yaml
-        read_only: true
-      - type: bind
-        source: ../siloLapisTests/testData/reference_genomes.json
-        target: /workspace/reference_genomes.json
-        read_only: true
-      - type: bind
-        source: ./src/test/resources/config/testAccessKeys.yaml
-        target: /workspace/access_keys.yaml
+#  lapisProtected:
+#    image: ghcr.io/genspectrum/lapis-v2:${LAPIS_TAG}
+#    ports:
+#      - "8092:8080"
+#    command: --silo.url=http://silo:8081 --lapis.accessKeys.path=/workspace/access_keys.yaml
+#    volumes:
+#      - type: bind
+#        source: ../siloLapisTests/testData/protectedTestDatabaseConfig.yaml
+#        target: /workspace/database_config.yaml
+#        read_only: true
+#      - type: bind
+#        source: ../siloLapisTests/testData/reference_genomes.json
+#        target: /workspace/reference_genomes.json
+#        read_only: true
+#      - type: bind
+#        source: ./src/test/resources/config/testAccessKeys.yaml
+#        target: /workspace/access_keys.yaml
